Added references, etc.
This is just a copy of my default reference file, which should have a
lot of what we need, but if you all prefer a different reference file
we could do something else

--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -7,6 +7,8 @@
 								% TeX will automatically convert eps --> pdf in pdflatex		
 \usepackage{amssymb}
 
+%Submission guidelines for PLoS ONE: http://journals.plos.org/plosone/s/submission-guidelines
+
 \title{OSPREY 3: Open-Source Protein Redesign for You, Refactored, with Powerful New Features}
 \author{Donald Lab}
 %\date{}							% Activate to display a given date or no date
@@ -17,7 +19,15 @@
 %\subsection{}
 
 \section{Abstract}
+
 \section{Introduction}
+\input{introduction.tex}
+
 \section{New features}
+%etc
+
+\bibliographystyle{plain}
+\bibliography{references}
+
 
 \end{document}  
