--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx}				% Use pdf, png, jpg, or eps with pdflatex; use eps in DVI mode
 								% TeX will automatically convert eps --> pdf in pdflatex		
 \usepackage{amssymb}
+\usepackage{cite}
 
 %Submission guidelines for PLoS ONE: http://journals.plos.org/plosone/s/submission-guidelines
 
@@ -24,6 +25,8 @@
 \input{introduction.tex}
 
 \section{New features}
+\input{LUTE.tex}
+\input{CATS.tex}
 %etc
 
 \bibliographystyle{plain}
