Past successes of OSPREY
Also changed big caps to small caps

--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -10,7 +10,7 @@
 
 %Submission guidelines for PLoS ONE: http://journals.plos.org/plosone/s/submission-guidelines
 
-\title{OSPREY 3: Open-Source Protein Redesign for You, Refactored, with Powerful New Features}
+\title{{\sc osprey} 3: Open-Source Protein Redesign for You, Refactored, with Powerful New Features}
 \author{Donald Lab}
 %\date{}							% Activate to display a given date or no date
 
