--- a/introduction.tex
+++ b/introduction.tex
@@ -1,1 +1,11 @@
-For over a decade, the OSPREY software package~\cite{OSPREY,OSPREY_MIE} has offered the protein design community a unique combination of continuous flexibility modeling, ensemble modeling, and algorithms with provable guarantees.  Having begun as a software release for the $K^*$ algorithm, which approximates binding constants using ensemble modeling, it now boasts a wide array of algorithms found in no other software.  OSPREY has been used in many designs that were empirically successful,~\textit{in vitro} and~\textit{in vivo} as well as in non-human primates.  However, as we added more and more algorithms into OSPREY, the code became somewhat complicated and messy.  Thus, we have now refactored it, to facilitate the adding of new features both by ourselves and by any others.  We have also introduced a convenient Python interface and GPU support, allowing designs to be completed much more quickly and easily than in previous version of OSPREY.  We believe OSPREY 3 will be a very useful tool for both developers and users of provably accurate protein design algorithms.  
+For over a decade, the {\sc osprey} software package~\cite{OSPREY,minDEE,OSPREY_MIE} has offered the protein design community a unique combination of continuous flexibility modeling, ensemble modeling, and algorithms with provable guarantees.  Having begun as a software release for the $K^*$ algorithm, which approximates binding constants using ensemble modeling, it now boasts a wide array of algorithms found in no other software.  {\sc osprey} has been used in many designs that were empirically successful---\textit{in vitro}~\cite{VRC07_enhance,CFTR,runx1_cbfb,GrsA-LeuA,DHFR-PNAS,GrsA-TyrA,specific_probes} and \textit{in vivo}~\cite{VRC07_enhance,CFTR,runx1_cbfb,DHFR-PNAS} as well as in non-human primates~\cite{VRC07_enhance}.  However, as we added more and more algorithms into {\sc osprey}, the code became somewhat complicated and messy.  Thus, we have now refactored it, to facilitate the adding of new features both by ourselves and by any others.  We have also introduced a convenient Python interface and GPU support, allowing designs to be completed much more quickly and easily than in previous version of {\sc osprey}.  We believe {\sc osprey} 3 will be a very useful tool for both developers and users of provably accurate protein design algorithms.  
+
+\subsection{Past successes of {\sc osprey}}
+
+{\sc osprey} has been used for an impressive number of empirically successful designs, ranging from enzyme design to antibody design to prediction of antibiotic resistance mutations.  It is most applicable to problems that can be posed in terms of binding, allowing the $K^*$ algorithm to select the optimal sequence based on an estimate of binding free energy.  But most protein design problems can be posed in this way, sometimes in terms of binding to more than one ligand.  
+
+For example, we have successfully predicted antibiotic resistance mutations in bacterial dihydrofolate reductase (DHFR) by searching for sequences that have impaired drug binding compared to wild-type DHFR, but still form the enzyme-substrate complex as usual, allowing catalysis~\cite{DHFR-PNAS,DHFR-PNAS2}.  These ``designed'' sequences not only have the desired chemical properties, but are actually observed when bacteria are cultured in the presence of antibiotic~\cite{DHFR-PNAS2}.  Similarly, we have successfully changed the preferred substrate of an enzyme---the phenylalanine adenylation domain of gramicidin S synthetase---from phenylalanine to leucine by modeling of the two enzyme-substrate complexes, searching for sequence with improved binding for leucine and less for phenylalanine.  
+
+Still other successes of {\sc osprey} have involved improving a single binding interaction, like the interaction of the antibody VRC07 with its antigen, the gp120 surface protein of HIV.  Our enhanced antibodies not only improved binding and virus neutralization~\textit{in vitro}, but were also successful in non-human primates~\cite{VRC07_enhance} and are going into clinical trials.  Likewise, we have used {\sc osprey} to develop peptide inhibitors of CAL, a protein involved in cystic fibrosis~\cite{CFTR}.  This is a protein design problem of direct therapeutic significance that consists of optimizing a protein-protein binding interaction.  
+
+We believe {\sc osprey} 3 will enable an even greater range of successful designs.  
