--- a/references.bib
+++ b/references.bib
@@ -401,7 +401,16 @@
    year = {2017},
 }
 
-mimb_resistance
+@article{CATS,
+  title={{CATS (Coordinates of Atoms by Taylor Series)}: protein design with backbone flexibility in all locally feasible directions},
+  author={Hallen, Mark A. and Donald, Bruce R.},
+  journal={Bioinformatics},
+  volume={33},
+  number={14},
+  pages={i5-i12},
+  year={2017},
+  publisher={Oxford University Press}
+}
 
 
 
@@ -2257,3 +2266,141 @@ POOL doi:10.1002/prot.23207.
  number = {10},
  pages = {1395-1412},
 }
+
+
+%Special for OSPREY 3 paper
+
+
+@article{georgiev:2014aa,
+	title = {Antibodies {VRC}01 and 10E8 Neutralize {HIV}-1 with High Breadth and Potency Even with Ig-Framework Regions Substantially Reverted to Germline},
+	volume = {192},
+	issn = {0022-1767, 1550-6606},
+	url = {http://www.jimmunol.org/content/192/3/1100},
+	doi = {10.4049/jimmunol.1302515},
+	abstract = {Abs capable of effectively neutralizing {HIV}-1 generally exhibit very high levels of somatic hypermutation, both in their {CDR} and framework-variable regions. In many cases, full reversion of the Ab-framework mutations back to germline results in substantial to complete loss of {HIV}-1–neutralizing activity. However, it has been unclear whether all or most of the observed framework mutations would be necessary or whether a small subset of these mutations might be sufficient for broad and potent neutralization. To address this issue and to explore the dependence of neutralization activity on the level of somatic hypermutation in the Ab framework, we applied a computationally guided framework-reversion procedure to two broadly neutralizing anti–{HIV}-1 Abs, {VRC}01 and 10E8, which target two different {HIV}-1 sites of vulnerability. Ab variants in which up to 78\% (38 of 49 for {VRC}01) and 89\% (31 of 35 for 10E8) of framework mutations were reverted to germline retained breadth and potency within 3-fold of the mature Abs when evaluated on a panel of 21 diverse viral strains. Further, a {VRC}01 variant with an ∼50\% framework-reverted L chain showed a 2-fold improvement in potency over the mature Ab. Our results indicate that only a small number of Ab-framework mutations may be sufficient for high breadth and potency of {HIV}-1 neutralization by Abs {VRC}01 and 10E8. Partial framework revertants of {HIV}-1 broadly neutralizing Abs may present advantages over their highly mutated counterparts as Ab therapeutics and as targets for immunogen design.},
+	pages = {1100--1106},
+	number = {3},
+	journal = {The Journal of Immunology},
+	shortjournal = {J Immunol},
+	author = {Georgiev, Ivelin S. and Rudicell, Rebecca S. and Saunders, Kevin O. and Shi, Wei and Kirys, Tatsiana and {McKee}, Krisha and O’Dell, Sijy and Chuang, Gwo-Yu and Yang, Zhi-Yong and Ofek, Gilad and Connors, Mark and Mascola, John R. and Nabel, Gary J. and Kwong, Peter D.},
+	urldate = {2016-02-29},
+	date = {2014-02-01},
+    year = {2014},
+    month = {Feb},
+	langid = {english},
+	pmid = {24391217},
+	file = {Full Text PDF:/Users/pablo/Library/Application Support/Firefox/Profiles/zyixa16x.default/zotero/storage/2JQAQN8X/Georgiev et al. - 2014 - Antibodies VRC01 and 10E8 Neutralize HIV-1 with Hi.pdf:application/pdf;Snapshot:/Users/pablo/Library/Application Support/Firefox/Profiles/zyixa16x.default/zotero/storage/GI5ETIF5/1100.html:text/html}
+}
+
+
+@article{Joh14,
+	Abstract = {The design of functional membrane proteins from first principles represents a grand challenge in chemistry and structural biology. Here, we report the design of a membrane-spanning, four-helical bundle that transports first-row transition metal ions Zn(2+) and Co(2+), but not Ca(2+), across membranes. The conduction path was designed to contain two di-metal binding sites that bind with negative cooperativity. X-ray crystallography and solid-state and solution nuclear magnetic resonance indicate that the overall helical bundle is formed from two tightly interacting pairs of helices, which form individual domains that interact weakly along a more dynamic interface. Vesicle flux experiments show that as Zn(2+) ions diffuse down their concentration gradients, protons are antiported. These experiments illustrate the feasibility of designing membrane proteins with predefined structural and dynamic properties.},
+	Author = {Joh, Nathan H and Wang, Tuo and Bhate, Manasi P and Acharya, Rudresh and Wu, Yibing and Grabe, Michael and Hong, Mei and Grigoryan, Gevorg and DeGrado, William F},
+	Date-Added = {2015-03-15 15:11:52 +0000},
+	Date-Modified = {2015-03-15 15:11:52 +0000},
+	Doi = {10.1126/science.1261172},
+	Journal = {Science},
+	Journal-Full = {Science (New York, N.Y.)},
+	Mesh = {Carrier Proteins; Crystallography, X-Ray; Ion Transport; Lipid Bilayers; Membrane Proteins; Micelles; Molecular Dynamics Simulation; Protein Engineering; Protein Structure, Secondary; Zinc},
+	Month = {Dec},
+	Number = {6216},
+	Pages = {1520-4},
+	Pmid = {25525248},
+	Pst = {ppublish},
+	Title = {De novo design of a transmembrane Zn²⁺-transporting four-helix bundle},
+	Volume = {346},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1126/science.1261172}
+	}
+	
+	@article{Parker:2013aa,
+	Abstract = {Therapeutic proteins continue to yield revolutionary new treatments for a growing spectrum of human disease, but the development of these powerful drugs requires solving a unique set of challenges. For instance, it is increasingly apparent that mitigating potential anti-therapeutic immune responses, driven by molecular recognition of a therapeutic protein's peptide fragments, may be best accomplished early in the drug development process. One may eliminate immunogenic peptide fragments by mutating the cognate amino acid sequences, but deimmunizing mutations are constrained by the need for a folded, stable, and functional protein structure. These two concerns may be competing, as the mutations that are best at reducing immunogenicity often involve amino acids that are substantially different physicochemically. We develop a novel approach, called EpiSweep, that simultaneously optimizes both concerns. Our algorithm identifies sets of mutations making such Pareto optimal trade-offs between structure and immunogenicity, embodied by a molecular mechanics energy function and a T-cell epitope predictor, respectively. EpiSweep integrates structure-based protein design, sequence-based protein deimmunization, and algorithms for finding the Pareto frontier of a design space. While structure-based protein design is NP-hard, we employ integer programming techniques that are efficient in practice. Furthermore, EpiSweep only invokes the optimizer once per identified Pareto optimal design. We show that EpiSweep designs of regions of the therapeutics erythropoietin and staphylokinase are predicted to outperform previous experimental efforts. We also demonstrate EpiSweep's capacity for deimmunization of the entire proteins, case analyses involving dozens of predicted epitopes, and tens of thousands of unique side-chain interactions. Ultimately, Epi-Sweep is a powerful protein design tool that guides the protein engineer toward the most promising immunotolerant biotherapeutic candidates.},
+	Author = {Parker, Andrew S and Choi, Yoonjoo and Griswold, Karl E and Bailey-Kellogg, Chris},
+	Date-Added = {2015-03-15 15:25:58 +0000},
+	Date-Modified = {2015-03-15 15:25:58 +0000},
+	Doi = {10.1089/cmb.2012.0251},
+	Journal = {J Comput Biol},
+	Journal-Full = {Journal of computational biology : a journal of computational molecular cell biology},
+	Mesh = {Algorithms; Amino Acid Motifs; Amino Acids; Antigenic Variation; Bacterial Proteins; Computer-Aided Design; Drug Design; Epitopes, T-Lymphocyte; Erythropoietin; Humans; Metalloendopeptidases; Models, Molecular; Molecular Sequence Data; Protein Binding; Protein Engineering; Thermodynamics},
+	Month = {Feb},
+	Number = {2},
+	Pages = {152-65},
+	Pmc = {PMC3576912},
+	Pmid = {23384000},
+	Pst = {ppublish},
+	Title = {Structure-guided deimmunization of therapeutic proteins},
+	Volume = {20},
+	Year = {2013},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1089/cmb.2012.0251}}
+	
+	
+@article{Salvat:2015aa,
+	Abstract = {Anti-drug immune responses are a unique risk factor for biotherapeutics, and undesired immunogenicity can alter pharmacokinetics, compromise drug efficacy, and in some cases even threaten patient safety. To fully capitalize on the promise of biotherapeutics, more efficient and generally applicable protein deimmunization tools are needed. Mutagenic deletion of a protein's T cell epitopes is one powerful strategy to engineer immunotolerance, but deimmunizing mutations must maintain protein structure and function. Here, EpiSweep, a structure-based protein design and deimmunization algorithm, has been used to produce a panel of seven beta-lactamase drug candidates having 27-47% reductions in predicted epitope content. Despite bearing eight mutations each, all seven engineered enzymes maintained good stability and activity. At the same time, the variants exhibited dramatically reduced interaction with human class II major histocompatibility complex proteins, key regulators of anti-drug immune responses. When compared to 8-mutation designs generated with a sequence-based deimmunization algorithm, the structure-based designs retained greater thermostability and possessed fewer high affinity epitopes, the dominant drivers of anti-biotherapeutic immune responses. These experimental results validate the first structure-based deimmunization algorithm capable of mapping optimal biotherapeutic design space. By designing optimal mutations that reduce immunogenic potential while imparting favorable intramolecular interactions, broadly distributed epitopes may be simultaneously targeted using high mutational loads. Biotechnol. Bioeng. 2015;9999: 1-13. {\copyright} 2015 Wiley Periodicals, Inc.},
+	Author = {Salvat, Regina S and Choi, Yoonjoo and Bishop, Alexandra and Bailey-Kellogg, Chris and Griswold, Karl E},
+	Date-Added = {2015-03-15 15:32:58 +0000},
+	Date-Modified = {2015-03-15 15:32:58 +0000},
+	Doi = {10.1002/bit.25554},
+	Journal = {Biotechnol Bioeng},
+	Journal-Full = {Biotechnology and bioengineering},
+	Keywords = {T cell epitope deletion; biotherapeutics; computational protein design; deimmunization; immunogenicity},
+	Month = {Feb},
+	Pmid = {25655032},
+	Pst = {aheadofprint},
+	Title = {Protein deimmunization via structure-based design enables efficient epitope deletion at high mutational loads},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1002/bit.25554}}
+
+
+@article{Zhao:2015aa,
+	Abstract = {The enzyme lysostaphin possesses potent anti-staphylococcal activity and represents a promising antibacterial drug candidate; however, its immunogenicity poses a barrier to clinical translation. Here, structure-based biomolecular design enabled widespread depletion of lysostaphin DRB1(∗)0401 restricted T cell epitopes, and resulting deimmunized variants exhibited striking reductions in anti-drug antibody responses upon administration to humanized HLA-transgenic mice. This reduced immunogenicity translated into improved efficacy in the form of protection against repeated challenges with methicillin-resistant Staphylococcus aureus (MRSA). In contrast, while wild-type lysostaphin was efficacious against the initial MRSA infection, it failed to clear subsequent bacterial challenges that were coincident with escalating anti-drug antibody titers. These results extend the existing deimmunization literature, in which reduced immunogenicity and retained efficacy are assessed independently of each other. By correlating in vivo efficacy with longitudinal measures of anti-drug antibody development, we provide the first direct evidence that T cell epitope depletion manifests enhanced biotherapeutic efficacy.},
+	Author = {Zhao, Hongliang and Verma, Deeptak and Li, Wen and Choi, Yoonjoo and Ndong, Christian and Fiering, Steven N and Bailey-Kellogg, Chris and Griswold, Karl E},
+	Date-Added = {2015-06-28 14:09:55 +0000},
+	Date-Modified = {2015-06-28 14:10:51 +0000},
+	Doi = {10.1016/j.chembiol.2015.04.017},
+	Journal = {Chem Biol},
+	Journal-Full = {Chemistry \& biology},
+	Month = {May},
+	Number = {5},
+	Pages = {629-39},
+	Pmc = {PMC4441767},
+	Pmid = {26000749},
+	Pst = {ppublish},
+	Title = {Depletion of {T} cell epitopes in lysostaphin mitigates anti-drug antibody response and enhances antibacterial efficacy in vivo},
+	Volume = {22},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.chembiol.2015.04.017}}
+	
+%Doria-Rose PLoS Pathog 2017
+@Article{polyclonal17,
+   Author="Doria-Rose, N. A.  and Altae-Tran, H. R.  and Roark, R. S.  and Schmidt, S. D.  and Sutton, M. S.  and Louder, M. K.  and Chuang, G. Y.  and Bailer, R. T.  and Cortez, V.  and Kong, R.  and McKee, K.  and O'Dell, S.  and Wang, F.  and Abdool Karim, S. S.  and Binley, J. M.  and Connors, M.  and Haynes, B. F.  and Martin, M. A.  and Montefiori, D. C.  and Morris, L.  and Overbaugh, J.  and Kwong, P. D.  and Mascola, J. R.  and Georgiev, I. S. ",
+   Title="{{M}apping {P}olyclonal {H}{I}{V}-1 {A}ntibody {R}esponses via {N}ext-{G}eneration {N}eutralization {F}ingerprinting}",
+   Journal="PLoS Pathog.",
+   Year="2017",
+   Volume="13",
+   Number="1",
+   Pages="e1006148",
+   Month="Jan"
+}
+
+
+@Article{Gwo-yu17,
+   Author="Chuang, G. Y.  and Geng, H.  and Pancera, M.  and Xu, K.  and Cheng, C.  and Acharya, P.  and Chambers, M.  and Druz, A.  and Tsybovsky, Y.  and Wanninger, T. G.  and Yang, Y.  and Doria-Rose, N. A.  and Georgiev, I. S.  and Gorman, J.  and Joyce, M. G.  and O'Dell, S.  and Zhou, T.  and McDermott, A. B.  and Mascola, J. R.  and Kwong, P. D. ",
+   Title="{{S}tructure-{B}ased {D}esign of a {S}oluble {P}refusion-{C}losed {H}{I}{V}-1 {E}nv {T}rimer with {R}educed {C}{D}4 {A}ffinity and {I}mproved {I}mmunogenicity}",
+   Journal="J. Virol.",
+   Year="2017",
+   Volume="91",
+   Number="10",
+   Month="May"
+}
+
+
+@misc{clinical605,
+title={
+{VRC 605: A Phase 1 Dose-Escalation Study of the Safety and
+Pharmacokinetics of a Human Monoclonal Antibody, VRC07-523LS,
+Administered Intravenously or Subcutaneously to Healthy
+Adults. ClinicalTrials.gov Identifier: NCT03015181. NIAID And National
+Institutes of Health Clinical Center.  January (2017). {\tt
+https://clinicaltrials.gov/ct2/show/NCT03015181}} }
+}
+
