added bbk* stub

--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -5,6 +5,7 @@
 %\usepackage[parfill]{parskip}    		% Activate to begin paragraphs with an empty line rather than an indent
 \usepackage{graphicx}				% Use pdf, png, jpg, or eps with pdflatex; use eps in DVI mode
 								% TeX will automatically convert eps --> pdf in pdflatex		
+\usepackage{xspace}
 \usepackage{amssymb}
 \usepackage{cite}
 
@@ -27,6 +28,7 @@
 \section{New features}
 \input{LUTE.tex}
 \input{CATS.tex}
+\input{BBKS.tex}
 %etc
 
 \bibliographystyle{plain}
