--- a/BBKS.tex
+++ b/BBKS.tex
@@ -1,5 +1,10 @@
-\def\bbks{BBK$^*$\xspace}
+\def\as{\textit{$A^*$}\xspace}
+\def\ks{\textit{$K^*$}\xspace}
+\def\ka{\textit{$K_a$}\xspace}
+\def\bbks{\textit{BBK$^*$}\xspace}
 
 \subsection{\bbks: Efficiently computing the tightest binding sequences from a combinatorially large number of binding partners}
+
+\bbks improves upon the \ks algorithm~\cite{}, which uses dead-end elimination pruning~\cite{} followed by \as~\cite{} gap-free conformation enumeration to provably approximate the association constant, \ka, as the ratio of $\varepsilon$-approximate partition functions between the bound and unbound states of a protein-ligand complex. Importantly, each partition function ratio, called a \ks \emph{score}, is provably accurate to the the biophysical \emph{input model}~\cite{}. This model defines the set of allowed amino acid mutations (i.e.~the \emph{sequence space}), structural search space (i.e.~the input structures, and allowed protein flexibility), the optimization objective (e.g.~design for binding affinity), and the energy function~\cite{}. \ks efficiently approximates \ka by using provable guarantees to compute the ensemble of most probable, low-energy conformations and discard higher energy, rarely populated conformations in the protein or ligand. Although \ks is considerably more efficient than exhaustive conformation enumeration for all possible sequences, \ks and all previous provable ensemble-based algorithms~\cite{} are \emph{single-sequence} algorithms, which explicitly consider every allowed sequence. The empirical and asymptotic runtime complexity of single-sequence algorithms is linear in the number of possible sequences, and therefore exponential in the number of mutable residues. As the number of mutable residues increases, the number of possible sequences increases exponentially. Therefore, designs with many mutable residues rapidly become intractable when using single-sequence algorithms. To manage the combinatorial explosion of the sequence space, \ks uses its inter-mutation pruning filter to prune sequences whose \ks scores provably cannot be within a user-specified factor of the best sequence encountered thus far. Nevertheless, inter-mutation pruning is applied only \emph{after} \ks initiates binding affinity computation.
 
 ~\cite{BBK*}
