BBKS draft changes and macros for easy collaboration.

--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -9,6 +9,10 @@
 \usepackage{amssymb}
 \usepackage{cite}
 
+\usepackage{xcolor}
+\usepackage{xspace}
+\def\osprey{{\sc{osprey}}\xspace}
+
 %Submission guidelines for PLoS ONE: http://journals.plos.org/plosone/s/submission-guidelines
 
 \title{{\sc osprey} 3: Open-Source Protein Redesign for You, Refactored, with Powerful New Features}
