--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,6 @@
 For over a decade, the {\sc osprey} software package~\cite{OSPREY,minDEE,OSPREY_MIE} has offered the protein design community a unique combination of continuous flexibility modeling, ensemble modeling, and algorithms with provable guarantees.  Having begun as a software release for the $K^*$ algorithm, which approximates binding constants using ensemble modeling, it now boasts a wide array of algorithms found in no other software.  {\sc osprey} has been used in many designs that were empirically successful---\textit{in vitro}~\cite{VRC07_enhance,CFTR,runx1_cbfb,GrsA-LeuA,DHFR-PNAS,GrsA-TyrA,specific_probes} and \textit{in vivo}~\cite{VRC07_enhance,CFTR,runx1_cbfb,DHFR-PNAS} as well as in non-human primates~\cite{VRC07_enhance}.  {\sc osprey}'s predictions have been validated by a wide range of experimental methods, including binding assays, enzyme kinetics and activity assays, in cell assays (MICs, fitness) and viral neutralization, {\em in vivo} studies, and crystal structures~\cite{DHFR-PNAS2, VRC07_enhance}.    
 
-However, as we added more and more algorithms into {\sc osprey}, the code became somewhat complicated and messy.  Thus, we have now refactored it, to facilitate the adding of new features both by ourselves and by any others.  We have also introduced a convenient Python interface and GPU support, allowing designs to be completed much more quickly and easily than in previous version of {\sc osprey}.  We believe {\sc osprey} 3 will be a very useful tool for both developers and users of provably accurate protein design algorithms.  
+However, as {\sc osprey} grew to include more algorithms and features, the code became increasingly complicated and difficult to maintain.  The growing complexity of the software also hindered its ease-of-use. {\sc ospery} 3 represents a complete refactoring of the code, and presents a simpler and more intuitive interface that makes protein redesign much easier than before. The new code organization also facilitates adding new features to the open-source project, both by ourselves and by other contributors.  We have introduced a convenient Python scripting interface and added support for GPU acceleration of the bulk of the computation, allowing designs to be completed much more quickly and easily than in previous versions of {\sc osprey}.  We believe {\sc osprey} 3 will be a very useful tool for both developers and users of provably accurate protein design algorithms.  
 
 \subsection{Past successes of {\sc osprey}}
 
