Comments for Jeff

--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -20,6 +20,7 @@
 
 \newcommand{\jj}[1]{\if\submissionMode0{\em\color{blue}(JJ: #1)}\else\fi}
 \newcommand{\jeff}[1]{\if\submissionMode0{\em\color{blue}(Jeff: #1)}\else\fi}
+\newcommand{\suggestion}[1]{\if\submissionMode0{\color{green}\textbf{#1}}\else\fi}
 
 
 %Submission guidelines for PLoS ONE: http://journals.plos.org/plosone/s/submission-guidelines
