resolve comments, do edit round, update GPU figure

--- a/python.tex
+++ b/python.tex
@@ -1,5 +1,5 @@
 
-One of the most visible additions to \osprey3 is the Python application programming interface (API), which allows fine-grained control over design parameters while also presenting a \suggestion{streamlined,} easy-to-use experience. \osprey3 still supports a command-line interface with configuration files for backwards compatibility, but new development will be focused mostly on the new Python interface. \jeff{Is this even true? Not entirely sure...} \jj{I'm not sure myself, since for day-to-day uses I wound up writing python scripts to produce a modified command line interface. It's worth discussing among the OSPREY developers. I'd say that a Python interface is friendlier than Java, and doesn't require compilation, which does save protein designers time.}
+One of the most visible additions to \osprey3 is the Python application programming interface (API), which allows fine-grained control over design parameters in a streamlined and easy-to-use experience. \osprey3 still supports a command-line interface with configuration files for backwards compatibility, but new development will be focused mostly on the new Python interface. \jeff{Is this even true? Not entirely sure...} \jj{I'm not sure myself, since for day-to-day uses I wound up writing python scripts to produce a modified command line interface. It's worth discussing among the OSPREY developers. I'd say that a Python interface is friendlier than Java, and doesn't require compilation, which does save protein designers time.}
 
 The \osprey3 distribution contains a Python module which can be installed using the popular package manager {\sc pip}. Once installed, using \osprey3 is as easy as writing a python script. High-performance computations are still performed in the Java virtual machine to give the fastest runtimes, so Java is still required to run \osprey3, but communication between the Python enviroment and the Java environment is handled behind-the-scenes, and \osprey3 still looks and feels like a regular Python application.
 
