--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -12,6 +12,12 @@
 \usepackage{xcolor}
 \usepackage{xspace}
 \def\osprey{{\sc{osprey}}\xspace}
+\def\bwmstar{BWM$^*$}
+\def\as{\textit{$A^*$}\xspace}
+\def\ks{\textit{$K^*$}\xspace}
+\def\ka{\textit{$K_a$}\xspace}
+\def\bbks{\textit{BBK$^*$}\xspace}
+
 
 \usepackage{listings}
 \lstset{
@@ -35,6 +41,7 @@
 %\subsection{}
 
 \section{Abstract}
+\input{abstract.tex}
 
 \section{Introduction}
 \input{introduction.tex}
