--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -61,6 +61,8 @@
 \section{Python scripting improves ease-of-use}
 \input{python.tex}
 
+\section{Conclusions}
+\input{conclusions.tex}
 
 \bibliographystyle{plain}
 \bibliography{references}
