--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -32,11 +32,14 @@
 %Submission guidelines for PLoS ONE: http://journals.plos.org/plosone/s/submission-guidelines
 
 \title{{\sc osprey} 3: Open-Source Protein Redesign for You, Refactored, with Powerful New Features}
-\author{Donald Lab}
+\author{Mark A. Hallen*, Jeffrey W. Martin*, Adegoke Ojewole$^\dagger$, Jonathan D. Jou$^\dagger$, \\
+Anna U. Lowegard, Marcel S. Frenkel, Pablo Gainza, Hunter M. Nisonoff, Aditya Mukund, \\
+Siyu Wang, Graham Holt, David Zhou, Elizabeth Dowd, and Bruce R. Donald}
 %\date{}							% Activate to display a given date or no date
 
 \begin{document}
 \maketitle
+*,$^\dagger$ These authors contributed equally
 %\section{}
 %\subsection{}
 
