--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -32,14 +32,19 @@
 %Submission guidelines for PLoS ONE: http://journals.plos.org/plosone/s/submission-guidelines
 
 \title{{\sc osprey} 3: Open-Source Protein Redesign for You, Refactored, with Powerful New Features}
-\author{Mark A. Hallen*, Jeffrey W. Martin*, Adegoke Ojewole$^\dagger$, Jonathan D. Jou$^\dagger$, \\
-Anna U. Lowegard, Marcel S. Frenkel, Pablo Gainza, Hunter M. Nisonoff, Aditya Mukund, \\
-Siyu Wang, Graham Holt, David Zhou, Elizabeth Dowd, and Bruce R. Donald}
+\author{Mark A. Hallen$^{*,1,3}$, Jeffrey W. Martin$^{*,1}$, Adegoke Ojewole$^{\dagger,4}$, \\
+Jonathan D. Jou$^{\dagger,1}$, Anna U. Lowegard$^4$, Marcel S. Frenkel$^5$, Pablo Gainza$^1$, \\
+Hunter M. Nisonoff$^1$, Aditya Mukund$^1$, Siyu Wang$^4$, Graham Holt$^4$, David Zhou$^1$, \\
+Elizabeth Dowd$^1$, and Bruce R. Donald$^{1,2,5}$}
 %\date{}							% Activate to display a given date or no date
 
 \begin{document}
 \maketitle
-*,$^\dagger$ These authors contributed equally
+\hspace{-0.25in}$^*,^\dagger$ These authors contributed equally \\
+Departments of $^1$ Computer Science and $^2$ Chemistry, Duke University, Durham, NC 27708 \\
+$^3$ Toyota Technological Institute at Chicago, Chicago, IL 60637 \\
+$^4$ Program in Computational Biology and Bioinformatics and $^5$ Department of Biochemistry, Duke University Medical Center, Durham, NC 27710
+
 %\section{}
 %\subsection{}
 
