--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -34,7 +34,7 @@
 \title{{\sc osprey} 3: Open-Source Protein Redesign for You, Refactored, with Powerful New Features}
 \author{Mark A. Hallen$^{*,1,3}$, Jeffrey W. Martin$^{*,1}$, Adegoke Ojewole$^{\dagger,4}$, \\
 Jonathan D. Jou$^{\dagger,1}$, Anna U. Lowegard$^4$, Marcel S. Frenkel$^5$, Pablo Gainza$^1$, \\
-Hunter M. Nisonoff$^1$, Aditya Mukund$^1$, Siyu Wang$^4$, Graham Holt$^4$, David Zhou$^1$, \\
+Hunter M. Nisonoff$^1$, Aditya Mukund$^1$, Siyu Wang$^4$, Graham T. Holt$^4$, David Zhou$^1$, \\
 Elizabeth Dowd$^1$, and Bruce R. Donald$^{1,2,5}$}
 %\date{}							% Activate to display a given date or no date
 
