--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -8,6 +8,7 @@
 \usepackage{xspace}
 \usepackage{amssymb}
 \usepackage{cite}
+\usepackage{setspace}
 
 \usepackage{xcolor}
 \usepackage{xspace}
@@ -23,11 +24,10 @@
 \lstset{
 	basicstyle=\footnotesize
 }
-
+\def\submissionMode{0}
 \newcommand{\jj}[1]{\if\submissionMode0{\em\color{blue}(JJ: #1)}\else\fi}
 \newcommand{\jeff}[1]{\if\submissionMode0{\em\color{blue}(Jeff: #1)}\else\fi}
 \newcommand{\suggestion}[1]{\if\submissionMode0{\color{green}\textbf{#1}}\else\fi}
-
 
 %Submission guidelines for PLoS ONE: http://journals.plos.org/plosone/s/submission-guidelines
 
@@ -39,6 +39,22 @@ Elizabeth Dowd$^1$, and Bruce R. Donald$^{1,2,5}$}
 %\date{}							% Activate to display a given date or no date
 
 \begin{document}
+
+%Draft preamble
+\if\submissionMode0
+{
+\textbf{This is a draft of the OSPREY 3.0 release paper. 
+\jj{Comments from a particular author are indicated like this.}
+Please read and give comments! In particular, please provide suggestions and comments regarding the following issues:
+\begin{enumerate}
+\item BWM*: JJ has implemented BWM* in a branch of OSPREY 3.0 at this point, but hasn't made it available through the python interface. Should this be a priority?
+\item MPLP: Jeff wants to know where we should mention the MPLP bounding implementation, which Hunter and Pablo worked on. This would be the first mention of the work in OSPREY, I believe.
+\item Figures: which figures should we add or make?
+\end{enumerate}
+}
+\newpage
+}\else\fi
+
 \maketitle
 \hspace{-0.25in}$^*,^\dagger$ These authors contributed equally \\
 Departments of $^1$ Computer Science and $^2$ Chemistry, Duke University, Durham, NC 27708 \\
@@ -47,6 +63,8 @@ $^4$ Program in Computational Biology and Bioinformatics and $^5$ Department of 
 
 %\section{}
 %\subsection{}
+
+\if\submissionMode1\singlespacing\else\doublespacing\fi
 
 \section{Abstract}
 \input{abstract.tex}
